--- a/.i3/config
+++ b/.i3/config
@@ -6,16 +6,15 @@
 #
 
 ####STARTUP
-#how can I start mopidy?
-exec xrandr --output DVI-I-1 --primary --right-of DVI-D-0 
-exec compton
-exec ~/.fehbg
+exec xrandr --output DVI-I-1 --primary --above DP-2 
+#exec compton
+exec ~/.fehbgblue
 
 #Josh's preferred window assignments
 #assign [class="New Tab - Google Chrome"] 2
 #assign [class="Google Chrome"] 2
-assign [class="Steam"] 2 play
-assign [class="steam"] 2 play
+#assign [class="Steam"] 2 play
+#assign [class="steam"] 2 play
 #josh's window movement mods
 bindsym $mod+shift+n move workspace to output left
 bindsym $mod+shift+m move workspace to output right
@@ -104,29 +103,41 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+# Define workspaces
+set $wks01 eins
+set $wks02 zwei
+set $wks03 drei
+set $wks04 vier
+set $wks05 fuenf
+set $wks06 sechs
+set $wks07 sieben
+set $wks08 acht
+set $wks09 neun
+set $wks10 zehn
+
 # switch to workspace
-bindsym $mod+1 workspace 1 code
-bindsym $mod+2 workspace 2 play
-bindsym $mod+3 workspace 3 school
-bindsym $mod+4 workspace 4 work
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod+1 workspace $wks01
+bindsym $mod+2 workspace $wks02
+bindsym $mod+3 workspace $wks03
+bindsym $mod+4 workspace $wks04
+bindsym $mod+5 workspace $wks05
+bindsym $mod+6 workspace $wks06
+bindsym $mod+7 workspace $wks07
+bindsym $mod+8 workspace $wks08
+bindsym $mod+9 workspace $wks09
+bindsym $mod+0 workspace $wks10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1 code
-bindsym $mod+Shift+2 move container to workspace 2 play
-bindsym $mod+Shift+3 move container to workspace 3 school
-bindsym $mod+Shift+4 move container to workspace 4 work
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+1 move container to workspace $wks01
+bindsym $mod+Shift+2 move container to workspace $wks02
+bindsym $mod+Shift+3 move container to workspace $wks03
+bindsym $mod+Shift+4 move container to workspace $wks04
+bindsym $mod+Shift+5 move container to workspace $wks05
+bindsym $mod+Shift+6 move container to workspace $wks06
+bindsym $mod+Shift+7 move container to workspace $wks07
+bindsym $mod+Shift+8 move container to workspace $wks08
+bindsym $mod+Shift+9 move container to workspace $wks09
+bindsym $mod+Shift+0 move container to workspace $wks10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -161,43 +172,22 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# color defines for Radesk-UBT, inspired by zenburn styled i3
-# COLOR NAMES ARE ON LINE FOLLOWING COLOR CODES
-set $bg     #2c2c2e
-#dark black
-
-set $fg     #9f9f9f
-#light gray, 159,159,159
-
-set $hi     #ef8fef
-#light purplish pinkish
-
-set $ac     #ff4d4d
-#med_bright red
-
-set $tx     #040404
-#very dark black
-
-set $ia     #8f8f8f
-#mild_dark gray
-
-set $be     #8f9fbf
-#cold stone greyish blue
-
-set $yw     #dccc90
-#beige
-
-set $gn     #9088b0
-#light pale purple
-
-set $rd     #e89393
-#pale salmon
+# color defines for Radesk-UBT, taken from React JS color pallete
+set $pr #00d8ff
+set $se #61dafb
+set $bg #151515
+set $sebg #2d2d2d
+set $trbg #000000
+set $ac #cc7a6f
+set $lf #fafafa
+set $df #2d2d2d
+set $wa #f8f5ec
 
 # set some nice colors      border     background  text
-client.focused              $ac        $ac         $tx
-client.unfocused            $bg        $bg         $ia
-client.focused_inactive     $bg        $bg         $ac
-client.urgent               $rd        $rd         $tx
+client.focused              $pr        $pr         $df
+client.unfocused            $bg        $bg         $se
+client.focused_inactive     $sebg      $sebg       $pr
+client.urgent               $wa        $wa         $df
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -205,15 +195,15 @@ bar {
         status_command i3status
 	colors {
 	#status on right of bar
-        background          $bg
-        statusline          $fg
-        separator           $hi
+        background          $trbg
+        statusline          $pr
+        separator           $sebg
 	
 	#workspaces
-        focused_workspace   $gn        $bg        $ac
-        active_workspace    $be        $bg        $be
-        inactive_workspace  $bg        $bg        $ia
-        urgent_workspace    $rd        $bg        $ac
+        focused_workspace   $sebg      $trbg      $pr
+        active_workspace    $sebg      $trbg      $lf
+        inactive_workspace  $sebg      $trbg      $lf
+        urgent_workspace    $sebg      $trbg      $ac
     }
 	
 }
