--- a/.gitconfig
+++ b/.gitconfig
@@ -2,6 +2,6 @@
 	email = hawkins@users.noreply.github.com
 	name = Josh Hawkins
 [alias]
-	la = "!git config -l | grep alias | cut -c 7-"
+	aliases = "!git config -l | grep alias | cut -c 7- | awk '{split($0, a, \"=\"; print a[1], \" => \", a[2];}'"
 	ignored = !git ls-files -v $(git rev-parse --show-toplevel) | grep "^[[:lower:]]"
 	force = "!f() { echo \"Use the force wisely, young padawan.\n----"; git $* -f; }; f"
