--- a/zsh/config
+++ b/zsh/config
@@ -25,4 +25,5 @@ source $DOTFILES/zsh/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 zsh -f $DOTFILES/update.sh
 
 # Finally, show me a dadjoke when I open a shell
-dadjoke
+dadjoke_cowsay
+
