Add day 3 settings

--- a/config.symlink/hypr/UserConfigs/UserSettings.conf
+++ b/config.symlink/hypr/UserConfigs/UserSettings.conf
@@ -35,8 +35,12 @@ input {
   repeat_rate = 50
   repeat_delay = 300
   
-  sensitivity = 0.11 #mouse sensitivity, -1 to 1
-  accel_profile = flat    # flat or adaptive or blank or EMPTY means libinput’s default mode
+  #okish: -0.6, adaptive
+  # 0.169, flat
+	#sensitivity = 0.169 #mouse sensitivity, -1 to 1
+  	#accel_profile = flat    # flat or adaptive or blank or EMPTY means libinput’s default mode
+  sensitivity = 0.3
+  accel_profile = blank    # flat or adaptive or blank or EMPTY means libinput’s default mode
   numlock_by_default = true
   left_handed = false
   follow_mouse = 1
