Use operator mono

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -2,12 +2,12 @@
 
 # you can choose themes from $HOME/.config/kitty/kitty-themes/
 include ./kitty-themes/00-Default.conf
-
-font_family FantasqueSansM Nerd Font Mono Bold
+# font_family OperatorMono Nerd Font
+#font_family OperatorMono FantasqueSansM Nerd Font Mono Bold
 font_size 16.0
-bold_font auto
-italic_font auto
-bold_italic_font auto
+# bold_font auto
+# italic_font auto
+# bold_italic_font auto
 
 background_opacity 0.9
 dynamic_background_opacity 1
@@ -32,3 +32,11 @@ selection_background none
 foreground #dddddd
 background #000000
 cursor #dddddd
+
+
+# BEGIN_KITTY_FONTS
+font_family      family="Operator Mono"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
