--- a/dot_config/hypr/Monitor_Profiles/fullscreen.conf
+++ b/dot_config/hypr/Monitor_Profiles/fullscreen.conf
@@ -26,7 +26,7 @@ monitor=,highres,auto,1
 #monitor = DP-1, preferred, auto, 1
 #monitor = HDMI-A-1, preferred,auto,1
 #monitor = HDMI-A-1,2560x2160,auto,1 
-monitor = HDMI-A-1,5120x2160,auto,1 
+monitor = HDMI-A-1,5120x2160@100,auto,1 
 
 # QEMU-KVM, virtual box or vmware
 #monitor = Virtual-1, 1920x1080@60,auto,1
