Paramount and nodim on multimedia_videos

--- a/dot_config/hypr/UserConfigs/WindowRules.conf
+++ b/dot_config/hypr/UserConfigs/WindowRules.conf
@@ -72,12 +72,14 @@ windowrule = tag +multimedia, class:^([Aa]udacious)$
 windowrule = tag +multimedia_video, content:video
 windowrule = tag +multimedia_video, title:^.*(Twitch).*$
 windowrule = tag +multimedia_video, title:^.*(YouTube).*$
+windowrule = tag +multimedia_video, title:^.*(Paramount).*$
 windowrule = tag +multimedia_video, class:^([Mm]pv|vlc)$
 windowrule = tag +multimedia_video, class:^([Mm]pv|vlc)$
 
 # Some special override rules
 windowrule = tag -browser, tag:multimedia_video*
 windowrule = opacity 2.0, tag:multimedia_video*
+windowrule = nodim, tag:multimedia_video*
 
 # settings tags
 windowrule = tag +settings, title:^(ROG Control)$
