--- a/dot_config/hypr/Monitor_Profiles/default.conf
+++ b/dot_config/hypr/Monitor_Profiles/default.conf
@@ -23,7 +23,8 @@ monitor=,highres,auto,1
 #monitor = eDP-1, preferred, auto, 1
 #monitor = eDP-1, 2560x1440@165, 0x0, 1 #own screen
 #monitor = DP-3, 1920x1080@240, auto, 1 
-#monitor = DP-1, preferred, auto, 1
+monitor = HDMI-A-1, preferred,auto,1
+monitor = DP-1, preferred, auto, 1
 #monitor = HDMI-A-1, preferred,auto,1
 #monitor = HDMI-A-1,2560x2160,auto,1 
 #monitor = HDMI-A-1,5120x2160,auto,1 
