Thunar, 12hr clock

--- a/dot_config/hypr/custom.d/init/settings.conf
+++ b/dot_config/hypr/custom.d/init/settings.conf
@@ -13,7 +13,7 @@
 # $HLDE_NO_MAXIMIZED = 1
 
 # Use 12h clock in hyprlock
-# env = HLDE_HYPRLOCK_12H,1
+env = HLDE_HYPRLOCK_12H,1
 
 # Enable custom hyprlock (requires Hyprland restart, config will be ~/.config/hypr/hyprlock-custom.conf)
 # env = HLDE_HYPRLOCK_CUSTOM,1
