Flat mouse accel

--- a/dot_config/hypr/conf.d/regular/settings.conf
+++ b/dot_config/hypr/conf.d/regular/settings.conf
@@ -86,6 +86,7 @@ input {
     kb_rules =
     follow_mouse = 1
     sensitivity = 0
+    accel_profile = flat
     touchpad {
         natural_scroll = false
     }
