Mouse, kitty theme off wallpaper

--- a/dot_config/hypr/conf.d/init/matugen.conf
+++ b/dot_config/hypr/conf.d/init/matugen.conf
@@ -1,202 +1,202 @@
 
-$background = rgba(111318ff)
+$background = rgba(0f1417ff)
 
 $error = rgba(ffb4abff)
 
 $error_container = rgba(93000aff)
 
-$inverse_on_surface = rgba(2e3035ff)
+$inverse_on_surface = rgba(2c3134ff)
 
-$inverse_primary = rgba(3b608fff)
+$inverse_primary = rgba(1e6586ff)
 
-$inverse_surface = rgba(e1e2e9ff)
+$inverse_surface = rgba(dfe3e7ff)
 
-$on_background = rgba(e1e2e9ff)
+$on_background = rgba(dfe3e7ff)
 
 $on_error = rgba(690005ff)
 
 $on_error_container = rgba(ffdad6ff)
 
-$on_primary = rgba(00315dff)
+$on_primary = rgba(00344aff)
 
-$on_primary_container = rgba(d4e3ffff)
+$on_primary_container = rgba(c5e7ffff)
 
-$on_primary_fixed = rgba(001c39ff)
+$on_primary_fixed = rgba(001e2dff)
 
-$on_primary_fixed_variant = rgba(204876ff)
+$on_primary_fixed_variant = rgba(004c6aff)
 
-$on_secondary = rgba(263141ff)
+$on_secondary = rgba(20333eff)
 
-$on_secondary_container = rgba(d8e3f8ff)
+$on_secondary_container = rgba(d1e5f4ff)
 
-$on_secondary_fixed = rgba(111c2bff)
+$on_secondary_fixed = rgba(0a1e28ff)
 
-$on_secondary_fixed_variant = rgba(3d4758ff)
+$on_secondary_fixed_variant = rgba(374955ff)
 
-$on_surface = rgba(e1e2e9ff)
+$on_surface = rgba(dfe3e7ff)
 
-$on_surface_variant = rgba(c3c6cfff)
+$on_surface_variant = rgba(c1c7cdff)
 
-$on_tertiary = rgba(3d2946ff)
+$on_tertiary = rgba(322c4cff)
 
-$on_tertiary_container = rgba(f6d9ffff)
+$on_tertiary_container = rgba(e7deffff)
 
-$on_tertiary_fixed = rgba(271430ff)
+$on_tertiary_fixed = rgba(1d1736ff)
 
-$on_tertiary_fixed_variant = rgba(543f5eff)
+$on_tertiary_fixed_variant = rgba(494263ff)
 
-$outline = rgba(8d9199ff)
+$outline = rgba(8b9297ff)
 
-$outline_variant = rgba(43474eff)
+$outline_variant = rgba(41484dff)
 
-$primary = rgba(a5c9feff)
+$primary = rgba(90cef4ff)
 
-$primary_container = rgba(204876ff)
+$primary_container = rgba(004c6aff)
 
-$primary_fixed = rgba(d4e3ffff)
+$primary_fixed = rgba(c5e7ffff)
 
-$primary_fixed_dim = rgba(a5c9feff)
+$primary_fixed_dim = rgba(90cef4ff)
 
 $scrim = rgba(000000ff)
 
-$secondary = rgba(bcc7dbff)
+$secondary = rgba(b6c9d8ff)
 
-$secondary_container = rgba(3d4758ff)
+$secondary_container = rgba(374955ff)
 
-$secondary_fixed = rgba(d8e3f8ff)
+$secondary_fixed = rgba(d1e5f4ff)
 
-$secondary_fixed_dim = rgba(bcc7dbff)
+$secondary_fixed_dim = rgba(b6c9d8ff)
 
 $shadow = rgba(000000ff)
 
-$source_color = rgba(0185edff)
+$source_color = rgba(42677dff)
 
-$surface = rgba(111318ff)
+$surface = rgba(0f1417ff)
 
-$surface_bright = rgba(37393eff)
+$surface_bright = rgba(353a3dff)
 
-$surface_container = rgba(1d2024ff)
+$surface_container = rgba(1c2023ff)
 
-$surface_container_high = rgba(272a2fff)
+$surface_container_high = rgba(262b2eff)
 
-$surface_container_highest = rgba(32353aff)
+$surface_container_highest = rgba(313539ff)
 
-$surface_container_low = rgba(191c20ff)
+$surface_container_low = rgba(181c1fff)
 
-$surface_container_lowest = rgba(0c0e13ff)
+$surface_container_lowest = rgba(0a0f12ff)
 
-$surface_dim = rgba(111318ff)
+$surface_dim = rgba(0f1417ff)
 
-$surface_tint = rgba(a5c9feff)
+$surface_tint = rgba(90cef4ff)
 
-$surface_variant = rgba(43474eff)
+$surface_variant = rgba(41484dff)
 
-$tertiary = rgba(d9bde3ff)
+$tertiary = rgba(cbc1e9ff)
 
-$tertiary_container = rgba(543f5eff)
+$tertiary_container = rgba(494263ff)
 
-$tertiary_fixed = rgba(f6d9ffff)
+$tertiary_fixed = rgba(e7deffff)
 
-$tertiary_fixed_dim = rgba(d9bde3ff)
+$tertiary_fixed_dim = rgba(cbc1e9ff)
 
 
 
-$background_raw = 111318
+$background_raw = 0f1417
 
 $error_raw = ffb4ab
 
 $error_container_raw = 93000a
 
-$inverse_on_surface_raw = 2e3035
+$inverse_on_surface_raw = 2c3134
 
-$inverse_primary_raw = 3b608f
+$inverse_primary_raw = 1e6586
 
-$inverse_surface_raw = e1e2e9
+$inverse_surface_raw = dfe3e7
 
-$on_background_raw = e1e2e9
+$on_background_raw = dfe3e7
 
 $on_error_raw = 690005
 
 $on_error_container_raw = ffdad6
 
-$on_primary_raw = 00315d
+$on_primary_raw = 00344a
 
-$on_primary_container_raw = d4e3ff
+$on_primary_container_raw = c5e7ff
 
-$on_primary_fixed_raw = 001c39
+$on_primary_fixed_raw = 001e2d
 
-$on_primary_fixed_variant_raw = 204876
+$on_primary_fixed_variant_raw = 004c6a
 
-$on_secondary_raw = 263141
+$on_secondary_raw = 20333e
 
-$on_secondary_container_raw = d8e3f8
+$on_secondary_container_raw = d1e5f4
 
-$on_secondary_fixed_raw = 111c2b
+$on_secondary_fixed_raw = 0a1e28
 
-$on_secondary_fixed_variant_raw = 3d4758
+$on_secondary_fixed_variant_raw = 374955
 
-$on_surface_raw = e1e2e9
+$on_surface_raw = dfe3e7
 
-$on_surface_variant_raw = c3c6cf
+$on_surface_variant_raw = c1c7cd
 
-$on_tertiary_raw = 3d2946
+$on_tertiary_raw = 322c4c
 
-$on_tertiary_container_raw = f6d9ff
+$on_tertiary_container_raw = e7deff
 
-$on_tertiary_fixed_raw = 271430
+$on_tertiary_fixed_raw = 1d1736
 
-$on_tertiary_fixed_variant_raw = 543f5e
+$on_tertiary_fixed_variant_raw = 494263
 
-$outline_raw = 8d9199
+$outline_raw = 8b9297
 
-$outline_variant_raw = 43474e
+$outline_variant_raw = 41484d
 
-$primary_raw = a5c9fe
+$primary_raw = 90cef4
 
-$primary_container_raw = 204876
+$primary_container_raw = 004c6a
 
-$primary_fixed_raw = d4e3ff
+$primary_fixed_raw = c5e7ff
 
-$primary_fixed_dim_raw = a5c9fe
+$primary_fixed_dim_raw = 90cef4
 
 $scrim_raw = 000000
 
-$secondary_raw = bcc7db
+$secondary_raw = b6c9d8
 
-$secondary_container_raw = 3d4758
+$secondary_container_raw = 374955
 
-$secondary_fixed_raw = d8e3f8
+$secondary_fixed_raw = d1e5f4
 
-$secondary_fixed_dim_raw = bcc7db
+$secondary_fixed_dim_raw = b6c9d8
 
 $shadow_raw = 000000
 
-$source_color_raw = 0185ed
+$source_color_raw = 42677d
 
-$surface_raw = 111318
+$surface_raw = 0f1417
 
-$surface_bright_raw = 37393e
+$surface_bright_raw = 353a3d
 
-$surface_container_raw = 1d2024
+$surface_container_raw = 1c2023
 
-$surface_container_high_raw = 272a2f
+$surface_container_high_raw = 262b2e
 
-$surface_container_highest_raw = 32353a
+$surface_container_highest_raw = 313539
 
-$surface_container_low_raw = 191c20
+$surface_container_low_raw = 181c1f
 
-$surface_container_lowest_raw = 0c0e13
+$surface_container_lowest_raw = 0a0f12
 
-$surface_dim_raw = 111318
+$surface_dim_raw = 0f1417
 
-$surface_tint_raw = a5c9fe
+$surface_tint_raw = 90cef4
 
-$surface_variant_raw = 43474e
+$surface_variant_raw = 41484d
 
-$tertiary_raw = d9bde3
+$tertiary_raw = cbc1e9
 
-$tertiary_container_raw = 543f5e
+$tertiary_container_raw = 494263
 
-$tertiary_fixed_raw = f6d9ff
+$tertiary_fixed_raw = e7deff
 
-$tertiary_fixed_dim_raw = d9bde3
+$tertiary_fixed_dim_raw = cbc1e9
