--- a/dot_config/kitty/hl.conf
+++ b/dot_config/kitty/hl.conf
@@ -2,7 +2,7 @@
 
 selection_background  #453a39
 selection_foreground  #111111
-background_opacity 0.8
-cursor_trail 0
+#background_opacity 0.8
+#cursor_trail 0
 include ./wallust.conf
 include ./matugen.conf
