Use full jakoolit bindings

--- a/dot_config/hypr/custom.d/regular/binds.conf
+++ b/dot_config/hypr/custom.d/regular/binds.conf
@@ -5,8 +5,28 @@
 # unbind = SUPER, A
 # bind = SUPER, A, exec, kitty
 
-# You can also remove all the default binds with
-# unbind = all
+# Remove Hyprland-DE binds
+unbind = all
+
+# Source JaKooLit's binds
+source = ~/.config/hypr/configs/Keybinds.conf
+source = ~/.config/hypr/UserConfigs/UserKeybinds.conf
+
+# Configure a few replacements broken by combining the two
+unbind = $mainMod, D
+bind = $mainMod, D, exec, $menu
+
+#unbind = $mainMod, V
+#bind = $mainMod, Space, togglefloating,
+
 
 #unbind = SUPER, Q
-#bind = SUPER, Enter, exec, kitty
+#bind = SUPER, Return, exec, kitty
+#bind = SUPER, Q, exec, kitty
+#bind = SUPER, A, exec, kitty
+
+# /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
+# Default Keybinds
+# visit https://wiki.hyprland.org/Configuring/Binds/ for more info
+
+
