Add waybar launching right menu but failing left

--- a/dot_config/kitty/wallust.conf
+++ b/dot_config/kitty/wallust.conf
@@ -1,10 +1,10 @@
 color0 #383A3E
-color1 #EC6E34
-color2 #B0A08E
-color3 #C19FAB
-color4 #03C5CA
-color5 #FBA039
-color6 #FDE7C8
+color1 #B15327
+color2 #84786A
+color3 #917780
+color4 #029498
+color5 #BC782B
+color6 #BEAD96
 color7 #F6EBDB
 color8 #ACA499
 color9 #EC6E34
