Also style hyperland with wallust and stop prompting sddm

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -6,3 +6,4 @@ source = ./conf.d/init/*.conf
 source = ./custom.d/init/*.conf
 source = ./conf.d/regular/*.conf
 source = ./custom.d/regular/*.conf
+source = ./wallust/wallust-hyprland.conf
