--- a/dot_config/kitty/wallust.conf
+++ b/dot_config/kitty/wallust.conf
@@ -1,17 +1,17 @@
-color0 #383A3E
-color1 #B15327
-color2 #84786A
-color3 #917780
-color4 #029498
-color5 #BC782B
-color6 #BEAD96
-color7 #F6EBDB
-color8 #ACA499
-color9 #EC6E34
-color10 #B0A08E
-color11 #C19FAB
-color12 #03C5CA
-color13 #FBA039
-color14 #FDE7C8
-color15 #F6EBDB
-cursor #D7CBBD
+color0 #403C47
+color1 #787D9E
+color2 #AA7F8C
+color3 #7F9D9F
+color4 #EC73F3
+color5 #98A9ED
+color6 #D8CFDF
+color7 #E3DFE7
+color8 #9F9CA1
+color9 #787D9E
+color10 #AA7F8C
+color11 #7F9D9F
+color12 #EC73F3
+color13 #98A9ED
+color14 #D8CFDF
+color15 #E3DFE7
+cursor #CEB7C0
