--- a/dot_config/wallust/wallust.toml
+++ b/dot_config/wallust/wallust.toml
@@ -11,8 +11,8 @@ kitty.target = '~/.config/kitty/wallust.conf'
 cava.template = 'colors-cava'
 cava.target = '~/.config/cava/config'
 
-#hypr.template = 'colors-hyprland.conf'
-#hypr.target = '~/.config/hypr/wallust/wallust-hyprland.conf'
+hypr.template = 'colors-hyprland.conf'
+hypr.target = '~/.config/hypr/wallust/wallust-hyprland.conf'
 
 rofi.template = 'colors-rofi.rasi'
 rofi.target = '~/.config/rofi/wallust/colors-rofi.rasi'
