--- a/dot_config/hypr/conf.d/init/matugen.conf
+++ b/dot_config/hypr/conf.d/init/matugen.conf
@@ -1,202 +1,202 @@
 
-$background = rgba(0f1417ff)
+$background = rgba(151218ff)
 
 $error = rgba(ffb4abff)
 
 $error_container = rgba(93000aff)
 
-$inverse_on_surface = rgba(2c3134ff)
+$inverse_on_surface = rgba(332f35ff)
 
-$inverse_primary = rgba(1e6586ff)
+$inverse_primary = rgba(6c538cff)
 
-$inverse_surface = rgba(dfe3e7ff)
+$inverse_surface = rgba(e8e0e8ff)
 
-$on_background = rgba(dfe3e7ff)
+$on_background = rgba(e8e0e8ff)
 
 $on_error = rgba(690005ff)
 
 $on_error_container = rgba(ffdad6ff)
 
-$on_primary = rgba(00344aff)
+$on_primary = rgba(3c245aff)
 
-$on_primary_container = rgba(c5e7ffff)
+$on_primary_container = rgba(eedcffff)
 
-$on_primary_fixed = rgba(001e2dff)
+$on_primary_fixed = rgba(260d44ff)
 
-$on_primary_fixed_variant = rgba(004c6aff)
+$on_primary_fixed_variant = rgba(533b72ff)
 
-$on_secondary = rgba(20333eff)
+$on_secondary = rgba(352d40ff)
 
-$on_secondary_container = rgba(d1e5f4ff)
+$on_secondary_container = rgba(ecddf7ff)
 
-$on_secondary_fixed = rgba(0a1e28ff)
+$on_secondary_fixed = rgba(20182aff)
 
-$on_secondary_fixed_variant = rgba(374955ff)
+$on_secondary_fixed_variant = rgba(4c4357ff)
 
-$on_surface = rgba(dfe3e7ff)
+$on_surface = rgba(e8e0e8ff)
 
-$on_surface_variant = rgba(c1c7cdff)
+$on_surface_variant = rgba(ccc4cfff)
 
-$on_tertiary = rgba(322c4cff)
+$on_tertiary = rgba(4b252dff)
 
-$on_tertiary_container = rgba(e7deffff)
+$on_tertiary_container = rgba(ffd9deff)
 
-$on_tertiary_fixed = rgba(1d1736ff)
+$on_tertiary_fixed = rgba(321018ff)
 
-$on_tertiary_fixed_variant = rgba(494263ff)
+$on_tertiary_fixed_variant = rgba(653b43ff)
 
-$outline = rgba(8b9297ff)
+$outline = rgba(958e99ff)
 
-$outline_variant = rgba(41484dff)
+$outline_variant = rgba(4a454eff)
 
-$primary = rgba(90cef4ff)
+$primary = rgba(d8bafaff)
 
-$primary_container = rgba(004c6aff)
+$primary_container = rgba(533b72ff)
 
-$primary_fixed = rgba(c5e7ffff)
+$primary_fixed = rgba(eedcffff)
 
-$primary_fixed_dim = rgba(90cef4ff)
+$primary_fixed_dim = rgba(d8bafaff)
 
 $scrim = rgba(000000ff)
 
-$secondary = rgba(b6c9d8ff)
+$secondary = rgba(cfc1daff)
 
-$secondary_container = rgba(374955ff)
+$secondary_container = rgba(4c4357ff)
 
-$secondary_fixed = rgba(d1e5f4ff)
+$secondary_fixed = rgba(ecddf7ff)
 
-$secondary_fixed_dim = rgba(b6c9d8ff)
+$secondary_fixed_dim = rgba(cfc1daff)
 
 $shadow = rgba(000000ff)
 
-$source_color = rgba(42677dff)
+$source_color = rgba(9558e1ff)
 
-$surface = rgba(0f1417ff)
+$surface = rgba(151218ff)
 
-$surface_bright = rgba(353a3dff)
+$surface_bright = rgba(3b383eff)
 
-$surface_container = rgba(1c2023ff)
+$surface_container = rgba(211e24ff)
 
-$surface_container_high = rgba(262b2eff)
+$surface_container_high = rgba(2c292fff)
 
-$surface_container_highest = rgba(313539ff)
+$surface_container_highest = rgba(373339ff)
 
-$surface_container_low = rgba(181c1fff)
+$surface_container_low = rgba(1d1a20ff)
 
-$surface_container_lowest = rgba(0a0f12ff)
+$surface_container_lowest = rgba(100d12ff)
 
-$surface_dim = rgba(0f1417ff)
+$surface_dim = rgba(151218ff)
 
-$surface_tint = rgba(90cef4ff)
+$surface_tint = rgba(d8bafaff)
 
-$surface_variant = rgba(41484dff)
+$surface_variant = rgba(4a454eff)
 
-$tertiary = rgba(cbc1e9ff)
+$tertiary = rgba(f2b7c0ff)
 
-$tertiary_container = rgba(494263ff)
+$tertiary_container = rgba(653b43ff)
 
-$tertiary_fixed = rgba(e7deffff)
+$tertiary_fixed = rgba(ffd9deff)
 
-$tertiary_fixed_dim = rgba(cbc1e9ff)
+$tertiary_fixed_dim = rgba(f2b7c0ff)
 
 
 
-$background_raw = 0f1417
+$background_raw = 151218
 
 $error_raw = ffb4ab
 
 $error_container_raw = 93000a
 
-$inverse_on_surface_raw = 2c3134
+$inverse_on_surface_raw = 332f35
 
-$inverse_primary_raw = 1e6586
+$inverse_primary_raw = 6c538c
 
-$inverse_surface_raw = dfe3e7
+$inverse_surface_raw = e8e0e8
 
-$on_background_raw = dfe3e7
+$on_background_raw = e8e0e8
 
 $on_error_raw = 690005
 
 $on_error_container_raw = ffdad6
 
-$on_primary_raw = 00344a
+$on_primary_raw = 3c245a
 
-$on_primary_container_raw = c5e7ff
+$on_primary_container_raw = eedcff
 
-$on_primary_fixed_raw = 001e2d
+$on_primary_fixed_raw = 260d44
 
-$on_primary_fixed_variant_raw = 004c6a
+$on_primary_fixed_variant_raw = 533b72
 
-$on_secondary_raw = 20333e
+$on_secondary_raw = 352d40
 
-$on_secondary_container_raw = d1e5f4
+$on_secondary_container_raw = ecddf7
 
-$on_secondary_fixed_raw = 0a1e28
+$on_secondary_fixed_raw = 20182a
 
-$on_secondary_fixed_variant_raw = 374955
+$on_secondary_fixed_variant_raw = 4c4357
 
-$on_surface_raw = dfe3e7
+$on_surface_raw = e8e0e8
 
-$on_surface_variant_raw = c1c7cd
+$on_surface_variant_raw = ccc4cf
 
-$on_tertiary_raw = 322c4c
+$on_tertiary_raw = 4b252d
 
-$on_tertiary_container_raw = e7deff
+$on_tertiary_container_raw = ffd9de
 
-$on_tertiary_fixed_raw = 1d1736
+$on_tertiary_fixed_raw = 321018
 
-$on_tertiary_fixed_variant_raw = 494263
+$on_tertiary_fixed_variant_raw = 653b43
 
-$outline_raw = 8b9297
+$outline_raw = 958e99
 
-$outline_variant_raw = 41484d
+$outline_variant_raw = 4a454e
 
-$primary_raw = 90cef4
+$primary_raw = d8bafa
 
-$primary_container_raw = 004c6a
+$primary_container_raw = 533b72
 
-$primary_fixed_raw = c5e7ff
+$primary_fixed_raw = eedcff
 
-$primary_fixed_dim_raw = 90cef4
+$primary_fixed_dim_raw = d8bafa
 
 $scrim_raw = 000000
 
-$secondary_raw = b6c9d8
+$secondary_raw = cfc1da
 
-$secondary_container_raw = 374955
+$secondary_container_raw = 4c4357
 
-$secondary_fixed_raw = d1e5f4
+$secondary_fixed_raw = ecddf7
 
-$secondary_fixed_dim_raw = b6c9d8
+$secondary_fixed_dim_raw = cfc1da
 
 $shadow_raw = 000000
 
-$source_color_raw = 42677d
+$source_color_raw = 9558e1
 
-$surface_raw = 0f1417
+$surface_raw = 151218
 
-$surface_bright_raw = 353a3d
+$surface_bright_raw = 3b383e
 
-$surface_container_raw = 1c2023
+$surface_container_raw = 211e24
 
-$surface_container_high_raw = 262b2e
+$surface_container_high_raw = 2c292f
 
-$surface_container_highest_raw = 313539
+$surface_container_highest_raw = 373339
 
-$surface_container_low_raw = 181c1f
+$surface_container_low_raw = 1d1a20
 
-$surface_container_lowest_raw = 0a0f12
+$surface_container_lowest_raw = 100d12
 
-$surface_dim_raw = 0f1417
+$surface_dim_raw = 151218
 
-$surface_tint_raw = 90cef4
+$surface_tint_raw = d8bafa
 
-$surface_variant_raw = 41484d
+$surface_variant_raw = 4a454e
 
-$tertiary_raw = cbc1e9
+$tertiary_raw = f2b7c0
 
-$tertiary_container_raw = 494263
+$tertiary_container_raw = 653b43
 
-$tertiary_fixed_raw = e7deff
+$tertiary_fixed_raw = ffd9de
 
-$tertiary_fixed_dim_raw = cbc1e9
+$tertiary_fixed_dim_raw = f2b7c0
