--- a/dot_config/hypr/wallust/wallust-hyprland.conf
+++ b/dot_config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(131314)
-$foreground = rgb(D7D9D4)
-$color0 = rgb(3A3A3C)
-$color1 = rgb(0E0D12)
-$color2 = rgb(0E0E12)
-$color3 = rgb(0E0E12)
-$color4 = rgb(622E22)
-$color5 = rgb(A4532F)
-$color6 = rgb(696E64)
-$color7 = rgb(BDC0BA)
-$color8 = rgb(848682)
-$color9 = rgb(131218)
-$color10 = rgb(131218)
-$color11 = rgb(131218)
-$color12 = rgb(823D2D)
-$color13 = rgb(DA6F3F)
-$color14 = rgb(8C9285)
-$color15 = rgb(BDC0BA)
+$background = rgb(19151F)
+$foreground = rgb(F1EEF4)
+$color0 = rgb(403C47)
+$color1 = rgb(787D9E)
+$color2 = rgb(AA7F8C)
+$color3 = rgb(7F9D9F)
+$color4 = rgb(EC73F3)
+$color5 = rgb(98A9ED)
+$color6 = rgb(D8CFDF)
+$color7 = rgb(E3DFE7)
+$color8 = rgb(9F9CA1)
+$color9 = rgb(787D9E)
+$color10 = rgb(AA7F8C)
+$color11 = rgb(7F9D9F)
+$color12 = rgb(EC73F3)
+$color13 = rgb(98A9ED)
+$color14 = rgb(D8CFDF)
+$color15 = rgb(E3DFE7)
