--- a/dot_config/hypr/conf.d/init/defaultApps.conf
+++ b/dot_config/hypr/conf.d/init/defaultApps.conf
@@ -1,7 +1,7 @@
 
 $terminal = kitty
 $fileManager = dolphin
-$menu = walker -s hypr
+$menu = walker -t hypr
 $lockscreen = hyprlock
 $screenshot = grimblast --freeze --notify copysave area
 
