--- a/dot_config/hypr/conf.d/regular/settings.conf
+++ b/dot_config/hypr/conf.d/regular/settings.conf
@@ -85,8 +85,7 @@ input {
     kb_options =
     kb_rules =
     follow_mouse = 1
-	#sensitivity = 0
-	#accel_profile = flat
+    sensitivity = 0
     touchpad {
         natural_scroll = false
     }
