--- a/dot_config/discord/settings.json
+++ b/dot_config/discord/settings.json
@@ -1,8 +1,14 @@
 {
-  "IS_MAXIMIZED": true,
+  "IS_MAXIMIZED": false,
   "IS_MINIMIZED": false,
   "BACKGROUND_COLOR": "#000000",
   "offloadAdmControls": false,
   "chromiumSwitches": {},
-  "SKIP_HOST_UPDATE": true
+  "SKIP_HOST_UPDATE": true,
+  "WINDOW_BOUNDS": {
+    "x": 16,
+    "y": 48,
+    "width": 5088,
+    "height": 2096
+  }
 }
