--- a/dot_config/hypr/wallust/wallust-hyprland.conf
+++ b/dot_config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(272831)
-$foreground = rgb(ECF3F7)
-$color0 = rgb(4C4D57)
-$color1 = rgb(96A0AF)
-$color2 = rgb(78B7A3)
-$color3 = rgb(65B8D0)
-$color4 = rgb(E5A588)
-$color5 = rgb(D4BFC8)
-$color6 = rgb(C8DEE8)
-$color7 = rgb(DBE6EB)
-$color8 = rgb(99A1A4)
-$color9 = rgb(96A0AF)
-$color10 = rgb(78B7A3)
-$color11 = rgb(65B8D0)
-$color12 = rgb(E5A588)
-$color13 = rgb(D4BFC8)
-$color14 = rgb(C8DEE8)
-$color15 = rgb(DBE6EB)
+$background = rgb(19151F)
+$foreground = rgb(F1EEF4)
+$color0 = rgb(403C47)
+$color1 = rgb(787D9E)
+$color2 = rgb(AA7F8C)
+$color3 = rgb(7F9D9F)
+$color4 = rgb(EC73F3)
+$color5 = rgb(98A9ED)
+$color6 = rgb(D8CFDF)
+$color7 = rgb(E3DFE7)
+$color8 = rgb(9F9CA1)
+$color9 = rgb(787D9E)
+$color10 = rgb(AA7F8C)
+$color11 = rgb(7F9D9F)
+$color12 = rgb(EC73F3)
+$color13 = rgb(98A9ED)
+$color14 = rgb(D8CFDF)
+$color15 = rgb(E3DFE7)
