--- a/dot_config/hypr/custom.d/regular/plugins.conf
+++ b/dot_config/hypr/custom.d/regular/plugins.conf
@@ -10,6 +10,29 @@ plugin {
         gesture_distance = 300 # how far is the "max"
         gesture_positive = true # positive = swipe down. Negative = swipe up.
     }
+
+    easymotion {
+        textsize=60
+        textfont="Operator Mono"
+	bgcolor = 0
+   
+        #what to do if a window is fullscreen
+        #none: nothing. (easymotion label won't be displayed on that window)
+        #toggle: take the window out of fullscreen entirely.
+        #maximize: convert the window to maximized.
+        #windows are restored to fullscreen after easymotion is exited/selected
+        fullscreen_action=none
+    
+        #which keys to use for selecting windows
+        motionkeys=abcdefghijklmnopqrstuvwxyz1234567890
+        #which keys to use for labeling windows
+        motionlabels=ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890
+    
+        #if a monitor has a focused special workspace, only put easymotion labels on the windows in the special workspace
+        only_special = true
+    }
 }
 
 bind = SUPER, A, hyprexpo:expo, toggle
+
+bind = SUPER, z, easymotion, action:hyprctl dispatch focuswindow address:{}
