--- a/dot_config/hypr/UserConfigs/WindowRules.conf
+++ b/dot_config/hypr/UserConfigs/WindowRules.conf
@@ -73,6 +73,8 @@ windowrule = tag +multimedia_video, content:video
 windowrule = tag +multimedia_video, title:^.*(Twitch).*$
 windowrule = tag +multimedia_video, title:^.*(YouTube).*$
 windowrule = tag +multimedia_video, title:^.*(Paramount).*$
+windowrule = tag +multimedia_video, title:^.*(HBO).*$
+windowrule = tag +multimedia_video, title:^.*(Hulu).*$
 windowrule = tag +multimedia_video, class:^([Mm]pv|vlc)$
 windowrule = tag +multimedia_video, class:^([Mm]pv|vlc)$
 
@@ -97,7 +99,7 @@ windowrule = tag +settings, class:^([Rr]ofi)$
 
 # viewer tags
 windowrule = tag +viewer, class:^(gnome-system-monitor|org.gnome.SystemMonitor|io.missioncenter.MissionCenter)$ # system monitor
-windowrule = tag +viewer, class:^(evince)$ # document viewer 
+windowrule = tag +viewer, class:^(evince)$ # document viewer
 windowrule = tag +viewer, class:^(eog|org.gnome.Loupe)$ # image viewer
 
 # POSITION
@@ -110,8 +112,8 @@ windowrule = center, title:^(Keybindings)$
 windowrule = center, class:^(pavucontrol|org.pulseaudio.pavucontrol|com.saivert.pwvucontrol)$
 windowrule = center, class:^([Ww]hatsapp-for-linux|ZapZap|com.rtosta.zapzap)$
 windowrule = center, class:^([Ff]erdium)$
-windowrule = move 72% 7%,title:^(Picture-in-Picture)$ 
-#windowrule = move 72% 7%,title:^(Firefox)$ 
+windowrule = move 72% 7%,title:^(Picture-in-Picture)$
+#windowrule = move 72% 7%,title:^(Firefox)$
 
 # windowrule to avoid idle for fullscreen apps
 #windowrule = idleinhibit fullscreen, class:^(*)$
@@ -150,7 +152,6 @@ windowrule = float, title:^(Picture-in-Picture)$
 windowrule = float, title:^(Authentication Required)$
 windowrule = center, title:^(Authentication Required)$
 windowrule = float, class:(codium|codium-url-handler|VSCodium), title:negative:(.*codium.*|.*VSCodium.*)
-windowrule = float, class:^(com.heroicgameslauncher.hgl)$, title:negative:(Heroic Games Launcher)
 windowrule = float, class:^([Ss]team)$, title:negative:^([Ss]team)$
 windowrule = float, class:([Tt]hunar), title:negative:(.*[Tt]hunar.*)
 
@@ -192,12 +193,12 @@ windowrule = size 70% 70%, tag:settings*
 windowrule = size 60% 70%, class:^([Ww]hatsapp-for-linux|ZapZap|com.rtosta.zapzap)$
 windowrule = size 60% 70%, class:^([Ff]erdium)$
 
-#windowrule = size 25% 25%, title:^(Picture-in-Picture)$   
-#windowrule = size 25% 25%, title:^(Firefox)$ 
+#windowrule = size 25% 25%, title:^(Picture-in-Picture)$
+#windowrule = size 25% 25%, title:^(Firefox)$
 
 # PINNING
 windowrule = pin, title:^(Picture-in-Picture)$
-#windowrule = pin,title:^(Firefox)$ 
+#windowrule = pin,title:^(Firefox)$
 
 # windowrule - extras
 windowrule = keepaspectratio, title:^(Picture-in-Picture)$
@@ -205,6 +206,7 @@ windowrule = keepaspectratio, title:^(Picture-in-Picture)$
 # BLUR & FULLSCREEN
 windowrule = noblur, tag:games*
 windowrule = fullscreen, tag:games*
+windowrule = opacity 2, tag:games*
 
 
 
