Further try to prevent quickshell owning notifications

--- a/dot_config/hypr/custom.d/regular/autostart.conf
+++ b/dot_config/hypr/custom.d/regular/autostart.conf
@@ -1,2 +1,11 @@
+# Force notifications to middle by killing hyprland-de's quickshell
+exec-once = killall quickshell
+exec-once = killall qs
+# ... and registering our own notification handler for JaKooLit's first
+exec-once = swaync
 source = ~/.config/hypr/UserConfigs/Startup_Apps.conf
 exec-once = hyprpm reload -n
+
+
+exec-once = discord --start-minimized
+
