Add float, pin windowrule

--- a/dot_config/hypr/UserConfigs/WindowRules.conf
+++ b/dot_config/hypr/UserConfigs/WindowRules.conf
@@ -197,6 +197,8 @@ windowrule = size 60% 70%, class:^([Ff]erdium)$
 #windowrule = size 25% 25%, title:^(Firefox)$
 
 # PINNING
+windowrulev2 = float, title:^(Picture in picture)$
+windowrulev2 = pin, title:^(Picture in picture)$
 windowrule = pin, title:^(Picture-in-Picture)$
 #windowrule = pin,title:^(Firefox)$
 
