RuneLite is opaque

--- a/dot_config/hypr/UserConfigs/WindowRules.conf
+++ b/dot_config/hypr/UserConfigs/WindowRules.conf
@@ -209,6 +209,7 @@ windowrule = keepaspectratio, title:^(Picture-in-Picture)$
 windowrule = noblur, tag:games*
 windowrule = fullscreen, tag:games*
 windowrule = opacity 2, tag:games*
+windowrule = opacity 2, title:^.*RuneLite.*$
 
 
 
