Pip opacity, fix wallpaper script

--- a/dot_config/hypr/UserConfigs/WindowRules.conf
+++ b/dot_config/hypr/UserConfigs/WindowRules.conf
@@ -184,7 +184,7 @@ windowrule = opacity 0.9 0.7, tag:wallpaper*
 windowrule = opacity 0.8 0.7, class:^(gedit|org.gnome.TextEditor|mousepad)$
 windowrule = opacity 0.9 0.8, class:^(deluge)$
 windowrule = opacity 0.9 0.8, class:^(seahorse)$ # gnome-keyring gui
-windowrule = opacity 0.95 0.75, title:^(Picture-in-Picture)$
+windowrule = opacity 2.0, title:^(Picture-in-Picture)$
 
 # SIZE
 windowrule = size 65% 90%, tag:KooL_Cheat*
@@ -210,12 +210,6 @@ windowrule = noblur, tag:games*
 windowrule = fullscreen, tag:games*
 windowrule = opacity 2, tag:games*
 windowrule = opacity 2, title:^.*RuneLite.*$
-
-
-
-#windowrule = bordercolor rgb(EE4B55) rgb(880808), fullscreen:1
-#windowrule = bordercolor rgb(282737) rgb(1E1D2D), floating:1
-#windowrule = opacity 0.8 0.8, pinned:1
 
 # LAYER RULES
 layerrule = blur, rofi
