r2modman on 4th desktop

--- a/dot_config/hypr/UserConfigs/WindowRules.conf
+++ b/dot_config/hypr/UserConfigs/WindowRules.conf
@@ -52,11 +52,13 @@ windowrule = tag +im, class:^(im.riot.Riot|Element)$ # Element Matrix client
 # game tags
 windowrule = tag +games, class:^(gamescope)$
 windowrule = tag +games, class:^(steam_app_\d+)$
+# r2modman games have to be added one-by-one
+windowrule = tag +games, class:^(valheim.+)$
 
 # gamestore tags
 windowrule = tag +gamestore, class:^([Ss]team)$
 windowrule = tag +gamestore, title:^([Ll]utris)$
-windowrule = tag +gamestore, class:^(com.heroicgameslauncher.hgl)$
+windowrule = tag +gamestore, title:^(r2modman)$
 
 # file-manager tags
 windowrule = tag +file-manager, class:^([Tt]hunar|org.gnome.Nautilus|[Pp]cmanfm-qt)$
