Runelite tooltips don't steal focus

--- a/dot_config/hypr/UserConfigs/WindowRules.conf
+++ b/dot_config/hypr/UserConfigs/WindowRules.conf
@@ -213,6 +213,9 @@ windowrule = fullscreen, tag:games*
 windowrule = opacity 2, tag:games*
 windowrule = opacity 2, title:^.*RuneLite.*$
 
+# Runelite tooltips don't steal focus
+windowrulev2 = nofocus,floating:1,class:net-runelite-client-RuneLite,title:^(win\d+)$
+
 # LAYER RULES
 layerrule = blur, rofi
 layerrule = ignorezero, rofi
