--- a/dot_config/hypr/custom.d/regular/settings.conf
+++ b/dot_config/hypr/custom.d/regular/settings.conf
@@ -4,3 +4,8 @@ input {
     repeat_rate = 50
     repeat_delay = 300
 }
+
+# 2025-10-12: hyprEasymotion broke, temporarily disabling errors
+debug {
+   suppress_errors = true
+}
