Start discord, steam on startup unfocused

--- a/dot_config/hypr/UserConfigs/WindowRules.conf
+++ b/dot_config/hypr/UserConfigs/WindowRules.conf
@@ -41,7 +41,7 @@ windowrule = tag +projects, class:^(jetbrains-.+)$ # JetBrains IDEs
 windowrule = tag +screenshare, class:^(com.obsproject.Studio)$
 
 # IM tags
-windowrule = tag +im, class:^([Dd]iscord|[Ww]ebCord|[Vv]esktop)$
+windowrule = tag +im_silent, class:^([Dd]iscord|[Ww]ebCord|[Vv]esktop)$  # Discord
 windowrule = tag +im, class:^([Ff]erdium)$
 windowrule = tag +im, class:^([Ww]hatsapp-for-linux)$
 windowrule = tag +im, class:^(ZapZap|com.rtosta.zapzap)$
@@ -56,7 +56,7 @@ windowrule = tag +games, class:^(steam_app_\d+)$
 windowrule = tag +games, class:^(valheim.+)$
 
 # gamestore tags
-windowrule = tag +gamestore, class:^([Ss]team)$
+#windowrule = tag +gamestore, class:^([Ss]team)$
 windowrule = tag +gamestore, title:^([Ll]utris)$
 windowrule = tag +gamestore, title:^(r2modman)$
 
@@ -126,8 +126,10 @@ windowrule = idleinhibit fullscreen, fullscreen:1
 #windowrule = workspace 3, class:^([Tt]hunar)$
 #windowrule = workspace 3, tag:projects*
 windowrule = workspace 2, tag:games*
-windowrule = workspace 3, tag:im*
+windowrule = workspace 3, tag:im
+windowrule = workspace 3 silent, tag:im_silent*  # Silent so Discord on startup doesn't steal focus
 windowrule = workspace 4, tag:gamestore*
+windowrule = workspace 4 silent, class:^([Ss]team)$  # Silent so Steam on startup doesn't steal focus
 
 # windowrule move to workspace (silent)
 windowrule = workspace 4 silent, tag:screenshare*
