--- a/dot_config/hypr/custom.d/init/autostart.conf
+++ b/dot_config/hypr/custom.d/init/autostart.conf
@@ -7,5 +7,5 @@ source = ~/.config/hypr/UserConfigs/Startup_Apps.conf
 exec-once = hyprpm reload -n
 
 
-exec-once = discord --start-minimized
-
+exec= discord
+exec= steam
