Correct run menu

--- a/dot_config/hypr/conf.d/regular/autostart.conf
+++ b/dot_config/hypr/conf.d/regular/autostart.conf
@@ -20,4 +20,4 @@ exec-once = hypridle
 
 # hyprlang endif
 
-#exec-once = QS_NO_RELOAD_POPUP=1 QML_DISABLE_DISK_CACHE=1 quickshell
+exec-once = QS_NO_RELOAD_POPUP=1 QML_DISABLE_DISK_CACHE=1 quickshell
