--- a/dot_config/hypr/UserConfigs/UserKeybinds.conf
+++ b/dot_config/hypr/UserConfigs/UserKeybinds.conf
@@ -12,7 +12,7 @@ $UserScripts = $HOME/.config/hypr/UserScripts
 $UserConfigs = $HOME/.config/hypr/UserConfigs
 
 # settings for User defaults apps - set your default terminal and file manager on this file
-source= $UserConfigs/01-UserDefaults.conf
+source= ./01-UserDefaults.conf
 
 # common shortcuts
 #bindr = $mainMod, $mainMod_L, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window # Super Key to Launch rofi menu
