Also dont blur Netflix

--- a/dot_config/hypr/UserConfigs/WindowRules.conf
+++ b/dot_config/hypr/UserConfigs/WindowRules.conf
@@ -75,6 +75,7 @@ windowrule = tag +multimedia_video, content:video
 windowrule = tag +multimedia_video, title:^.*(Twitch).*$
 windowrule = tag +multimedia_video, title:^.*(YouTube).*$
 windowrule = tag +multimedia_video, title:^.*(Paramount).*$
+windowrule = tag +multimedia_video, title:^.*(Netflix).*$
 windowrule = tag +multimedia_video, title:^.*(HBO).*$
 windowrule = tag +multimedia_video, title:^.*(Hulu).*$
 windowrule = tag +multimedia_video, class:^([Mm]pv|vlc)$
