--- a/dot_config/hypr/UserConfigs/UserKeybinds.conf
+++ b/dot_config/hypr/UserConfigs/UserKeybinds.conf
@@ -25,6 +25,7 @@ bind = $mainMod, E, exec, $files #file manager
 
 # Hawkins
 bind = $mainMod, S, exec, hyprctl dispatch pin  # pin window (must be floating)
+bind = $mainMod, R, exec, flatpak run com.adamcake.Bolt # #RuneLite / RuneScape
 
 
 # FEATURES / EXTRAS
