Add float runelite bind

--- a/dot_config/hypr/UserConfigs/UserKeybinds.conf
+++ b/dot_config/hypr/UserConfigs/UserKeybinds.conf
@@ -26,6 +26,7 @@ bind = $mainMod, E, exec, $files #file manager
 # Hawkins
 bind = $mainMod, S, exec, hyprctl dispatch pin  # pin window (must be floating)
 bind = $mainMod, R, exec, flatpak run com.adamcake.Bolt # #RuneLite / RuneScape
+bind = $mainMod SHIFT, R, exec, ~/code/float-runelite.sh 2100x1200 #1920x1080 # 2560x1920
 
 
 # FEATURES / EXTRAS
